# lspdock

./: Cargo.toml  Cross.toml  README.md  ides.md  nvim_example.md
.github/workflows/: release.yml  test.yml
src/: main.rs
src/config/: cli.rs  mod.rs  provider.rs  variables.rs
src/lsp/: binding.rs  mod.rs  parser.rs  pid.rs  types.rs
src/proxy/: config.rs  io.rs  mod.rs
