[package]
name = "lspdock"
version = "0.1.3"
edition = "2024"

[dependencies]
bollard = "0.19.0"
dirs = "6.0.0"
futures-core = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.36.1"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
toml = "0.9.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
